<resources>
    <string name="app_name">Stegano</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_login_btn_string">Login</string>
    <string name="action_logout">logout</string>

    <!-- login -->
    <string name="idtxthint">USERNAME</string>
    <string name="pwdtxthint">PASSWORD</string>
    <string name="loginbtntext">Login</string>
    <string name="forgot_pwd">Forget Password?</string>
    <string name="login_register">Sign Up</string>
    <string name="login_null_name_tip">Please enter username</string>
    <string name="title_activity_register">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_is_null">The message can\'t be null.</string>
    
    <!-- Strings related to Stegano -->
    <string name="stegano_title">Stegano Insert</string>
    <string name="stegano_hint">Please select Stegano Image</string>

    <!-- more action bar -->
    <string name="lcim_chat_bottom_picture">Image</string>
    <string name="lcim_chat_bottom_camera">Stegano</string>
    <string name="chat_common_username">Username</string>
    <string name="contact_search">Search</string>
    <string name="add_request">Friend Request</string>
    <string name="add_request_accept">Accept</string>
    <string name="add_request_reject">Dismiss</string>
    <string name="chat_utils_hardLoading">Loading</string>
    <string name="contact_sendRequestSucceed">Success</string>
    <string name="user_search">Search Friend</string>
    <string name="friend_info_username">Username</string>
    <string name="friend_info_add">Add</string>
    <string name="friend_info_avatar">Avatar</string>
    <string name="friend_info_delect">Delete</string>
    <string name="default_username">Username</string>
    <string name="carrier_storage">Capacity</string>
    <string name="carrier_default_storage">default_storage</string>
    <string name="carrier_image_size">Size：</string>
    <string name="carrier_add_time">Time：</string>
    <string name="carrier_add_carrier">Add Carrier</string>
    <string name="carrier_delete">Delete</string>
    <string name="profile_carrier_manage">Carrier Management</string>
    <string name="profile_settings">Settings</string>
    <string name="bottom_menu_msg">Message</string>
    <string name="bottom_menu_contact">Contacts</string>
    <string name="bottom_menu_me">Me</string>
</resources>
