<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/app_bar_chat"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:background="@drawable/contact_person_info_about_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/friend_info_avatar" />
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/user_info_avatar"
                android:layout_alignParentRight="true"
                android:layout_width="65dp"
                android:layout_height="65dp" />
        </RelativeLayout>
        <RelativeLayout
            android:background="@drawable/contact_person_info_about_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/friend_info_username" />
            <TextView
                android:id="@+id/friend_name"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textColor="@color/common_black"
                android:textSize="18sp" />
        </RelativeLayout>
        <Button
            android:id="@+id/add_request_btn"
            android:background="@drawable/common_btn"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:textColor="@color/common_white"
            android:textSize="18sp"
            android:text="@string/friend_info_add"
            android:visibility="gone"/>
        <Button
            android:id="@+id/delete_btn"
            android:background="@drawable/reject_btn"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:textColor="@color/common_white"
            android:textSize="18sp"
            android:text="@string/friend_info_delect"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
