<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/carrier_item_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/carrier_item_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/carrier_avatar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/default_avatar"/>
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/carrier_storage"/>
                <TextView
                    android:id="@+id/carrier_storage"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/carrier_image_size"/>
                <TextView
                    android:id="@+id/carrier_size"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/carrier_add_time"/>
                <TextView
                    android:id="@+id/carrier_time"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/carrier_delete_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/reject_btn"
            android:text="@string/carrier_delete"
            android:textColor="@color/common_white"/>
    </LinearLayout>
</LinearLayout>
