<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/profile_avatar_layout"
            android:background="@drawable/contact_person_info_about_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:maxHeight="80dp"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/friend_info_avatar" />
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/profile_avatar"
                android:layout_alignParentRight="true"
                android:layout_width="65dp"
                android:layout_height="65dp" />
        </RelativeLayout>
        <RelativeLayout
            android:background="@drawable/contact_person_info_about_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/friend_info_username" />
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textColor="@color/common_black"
                android:textSize="18sp" />
        </RelativeLayout>
        <Button
            android:id="@+id/profile_logout"
            android:background="@drawable/reject_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:textColor="@color/common_white"
            android:text="@string/action_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
